--- a/Vercel.json
+++ b/Vercel.json
@@ -13,3 +13,18 @@
     }
   ]
 }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "*.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
+}
